fixed home header alignment

--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -120,7 +120,7 @@ div.restaurant-info img.logo {
   font-size: 5em;
   font-family: 'Black Ops One', cursive;
   font-weight: 400;
-  margin: -0.4em 0 0 0.49em;
+  margin: -0.4em 0 0 0;
 }
 .restaurant-info h2 {
   font-size: 3em;
